// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductTile /> create tile component 1`] = `
<div
  className="fd-product-tile pink"
  isButton={true}
>
  <div
    className="fd-product-tile__media"
    style={
      Object {
        "backgroundImage": "url(https://techne.yaas.io/images/product-thumbnail-wide.png)",
      }
    }
  />
  <div
    className="fd-product-tile__content"
  >
    <h2
      className="fd-product-tile__title"
    >
      Tile Title
    </h2>
    <p>
      Tile Description
    </p>
  </div>
</div>
`;

exports[`<ProductTile /> create tile component 2`] = `
<div
  className="fd-product-tile is-disabled"
>
  <div
    className="fd-product-tile__media blue"
    style={
      Object {
        "backgroundImage": "url(https://techne.yaas.io/images/product-thumbnail-wide.png)",
      }
    }
  />
  <div
    className="fd-product-tile__content blue"
  >
    <h2
      className="fd-product-tile__title"
    >
      Tile Title
    </h2>
    <p>
      Tile Description
    </p>
  </div>
</div>
`;
